--- a/admin/src/assets/scss/style.scss
+++ b/admin/src/assets/scss/style.scss
@@ -393,8 +393,44 @@ background: linear-gradient(to right, #b91d73, #f953c6); /* W3C, IE 10+/ Edge, F
 .single-order-inner .customer-summary {
 	height: 100px;
 	background-color: #f5f5f5;
+	box-sizing: border-box;
 }
 
-.customer-summary .col-md-3 {
+.customer-summary {
+	margin-bottom: 20px;
+}
+
+.customer-summary .row{
+	padding: 12px 8px;
+}
+
+.customer-summary h5 {
+	font-size: 15px;
+	color: #b5b5b5;
+	padding-bottom: 2px;
+}
+
+.customer-summary h6 {
+	font-size: 18px;
+}
+
+.customer-summary .fa.fa-user {
+	font-size: 25px;
+}
+
+.order-summary .total-summary {
+	text-align: right;
+}
+
+.order-summary .total-summary h6 {
 	padding: 10px 0px;
+	border-bottom: 1px solid #f5f5f5;
+	width: 100%;
+	font-family: sans-serif;
+}
+
+.order-summary .total-summary h5 {
+	font-size: 18px;
+	padding: 10px 0px;
+	font-weight: 500;
 }
