--- a/admin/src/assets/css/style.css
+++ b/admin/src/assets/css/style.css
@@ -34,13 +34,13 @@ ul {
 }
 
 /** reset code **/
-.page-setup, .single-order, .settings, .store, .orders, .dashboard {
+.page-setup, .add-product, .single-order, .settings, .store, .orders, .dashboard {
   width: 100%;
   background-color: #f5f5f5;
   padding: 20px;
 }
 
-.page-inner-setup, .single-order .single-order-inner, .settings .settings-inner, .store .store-inner, .orders .orders-inner, .dashboard .dashboard-inner {
+.page-inner-setup, .add-product .add-product-inner, .single-order .single-order-inner, .settings .settings-inner, .store .store-inner, .orders .orders-inner, .dashboard .dashboard-inner {
   width: 95%;
   margin: 0px auto;
   padding: 20px;
@@ -426,6 +426,42 @@ ul {
   font-size: 18px;
   padding: 10px 0px;
   font-weight: 500;
+}
+
+/** Add Product **/
+.add-product-inner .left {
+  margin-bottom: 15px;
+  padding: 15px 10px;
+}
+
+.add-product-inner .left ul {
+  list-style: none;
+}
+
+.add-product-inner .left ul li i.fa.fa-tachometer, i.fa.fa-gift, i.fa.fa-shopping-basket, i.fa.fa-cog, i.fa.fa-line-chart {
+  width: 15%;
+}
+
+.add-product-inner .left ul li {
+  font-size: 20px;
+  padding: 10px 5px;
+  cursor: pointer;
+  color: #000;
+}
+
+.add-product-inner .left ul li .link {
+  color: #000;
+}
+
+.add-product-inner .left ul li:hover {
+  background-color: #33b27b;
+  border-radius: 5px;
+}
+
+.add-product-inner .right h2 {
+  padding-bottom: 8px;
+  margin-bottom: 8px;
+  border-bottom: 1px solid #f5f5f5;
 }
 
 /*# sourceMappingURL=style.css.map */
