--- a/admin/src/assets/css/style.css
+++ b/admin/src/assets/css/style.css
@@ -244,6 +244,23 @@ ul {
   padding-bottom: 15px;
 }
 
+.orders-inner .right {
+  padding-top: 15px;
+}
+
+.right .order-info {
+  width: 100%;
+  height: 60px;
+  background-color: #f5f5f5;
+  border-radius: 5px;
+  box-sizing: border-box;
+  padding: 8px;
+}
+
+.right .order-info .right {
+  padding: 10px 20px;
+}
+
 /** Store **/
 .store-inner .admin-profile {
   text-align: center;
