--- a/admin/src/assets/scss/style.scss
+++ b/admin/src/assets/scss/style.scss
@@ -190,7 +190,6 @@ background: linear-gradient(to right, #b91d73, #f953c6); /* W3C, IE 10+/ Edge, F
 }
 
 .orders-inner .left {
-	// background-color: #f5f5f5;
 	margin-bottom: 15px;
 	padding: 15px 10px;
 }
@@ -221,6 +220,23 @@ background: linear-gradient(to right, #b91d73, #f953c6); /* W3C, IE 10+/ Edge, F
 
 .orders-inner h2 {
 	padding-bottom: 15px;
+}
+
+.orders-inner .right {
+	padding-top: 15px;
+}
+
+.right .order-info {
+	width: 100%;
+	height: 60px;
+	background-color: #f5f5f5;
+	border-radius: 5px;
+	box-sizing: border-box;
+	padding: 8px;
+}
+
+.right .order-info .right {
+	padding: 10px 20px;
 }
 
 /** Store **/
