--- a/public/src/assets/css/style.css
+++ b/public/src/assets/css/style.css
@@ -1,21 +1,19 @@
-.page-setup, .product-single, .about, .contact, .cart, .cart_empty, .shop, .auth, .account, .checkout, .success {
+.page-setup, .success, .checkout, .account, .auth, .shop, .cart_empty, .cart, .contact, .about, .product-single {
   width: 100%;
   background-color: #f5f5f5;
   padding: 20px;
 }
 
-.page-container-setup, .product-single .product-single-info, .single-product-description, .about .about-container, .contact .contact-container, .cart .cart-container, .cart_empty .cart_container_empty, .auth .auth_container, .account .account-container, .checkout .checkout-container, .success .success_container {
+.page-container-setup, .success .success_container, .checkout .checkout-container, .account .account-container, .auth .auth_container, .cart_empty .cart_container_empty, .cart .cart-container, .contact .contact-container, .about .about-container, .single-product-description, .product-single .product-single-info {
   width: 95%;
   margin: 0px auto;
   padding: 20px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   background-color: #fff;
 }
 
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html, body {
@@ -30,6 +28,7 @@ body a {
 
 body a:hover {
   -webkit-transition: 0.3s all;
+  -moz-transition: 0.3s all;
   transition: 0.3s all;
   text-decoration: none;
 }
@@ -74,8 +73,7 @@ ul {
 }
 
 .navbar {
-  -webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.5);
-          box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.5);
 }
 
 .navbar .nav-item {
@@ -134,10 +132,8 @@ ul {
   color: #fff;
   left: 50%;
   top: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  transform: translate(-50%, -50%);
+  box-sizing: border-box;
 }
 
 .text-content h1 {
@@ -153,9 +149,7 @@ ul {
   border: 1px solid #ed017f;
   text-transform: uppercase;
   font-family: sans-serif;
-  -webkit-box-shadow: -1px 3px 4px rgba(0, 0, 0, 0.5);
-          box-shadow: -1px 3px 4px rgba(0, 0, 0, 0.5);
-  -webkit-transition: 0.3s ease-in-out;
+  box-shadow: -1px 3px 4px rgba(0, 0, 0, 0.5);
   transition: 0.3s ease-in-out;
 }
 
@@ -214,9 +208,7 @@ ul {
   border: 1px solid #ed017f;
   text-transform: uppercase;
   font-family: sans-serif;
-  -webkit-box-shadow: 0px 2px 3px 1px rgba(0, 0, 0, 0.5);
-          box-shadow: 0px 2px 3px 1px rgba(0, 0, 0, 0.5);
-  -webkit-transition: 0.3s ease-in-out;
+  box-shadow: 0px 2px 3px 1px rgba(0, 0, 0, 0.5);
   transition: 0.3s ease-in-out;
   top: 40%;
   left: 30%;
@@ -272,20 +264,16 @@ ul {
 
 .latest-deals .deal {
   background-color: #fff;
-  -webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   margin-bottom: 10px;
   cursor: pointer;
-  -webkit-transition: 0.5s ease-in-out;
   transition: 0.5s ease-in-out;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .latest-deals .deal:hover {
-  -webkit-box-shadow: 0px 2px 3px -1px rgba(0, 0, 0, 0.5);
-          box-shadow: 0px 2px 3px -1px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 2px 3px -1px rgba(0, 0, 0, 0.5);
   border-radius: unset;
 }
 
@@ -315,8 +303,7 @@ ul {
   margin: auto;
   background-color: #fff;
   border-radius: 5px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .popular-products h2 {
@@ -366,8 +353,7 @@ ul {
   background-color: #fff;
   padding: 15px;
   border-radius: 0px 0px 5px 5px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .item .description h2 {
@@ -395,8 +381,7 @@ ul {
   background-color: #fff;
   border-radius: 5px;
   padding: 15px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .about-eBaaba h2 {
@@ -421,8 +406,7 @@ ul {
   background-color: #1c1d1f;
   color: #fff;
   padding: 9px 0px 0px 15px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .newsletter .newsletter_container {
@@ -436,8 +420,7 @@ ul {
   border-radius: 5px 0px 0px 5px;
   padding: 8px 0px 8px 8px;
   margin-top: 15px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin-left: 80px;
 }
 
@@ -492,7 +475,6 @@ ul {
 
 .contact-info-inner ul li {
   display: inline-block;
-  -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
 }
 
@@ -550,7 +532,6 @@ ul {
 .footer-inner i.fa.fa-facebook, i.fa.fa-twitter, i.fa.fa-instagram {
   font-size: 20px;
   padding: 0px 10px 0px 0px;
-  -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out;
 }
 
@@ -572,8 +553,7 @@ ul {
 .copyright-area {
   width: 100%;
   background-color: #000;
-  -webkit-box-shadow: 0px 2px 3px 1px #ed017f;
-          box-shadow: 0px 2px 3px 1px #ed017f;
+  box-shadow: 0px 2px 3px 1px #ed017f;
 }
 
 .copyright-inner {
@@ -763,8 +743,7 @@ ul {
 }
 
 .contact a.submit:hover {
-  -webkit-box-shadow: -1px 2px 3px rgba(0, 0, 0, 0.5);
-          box-shadow: -1px 2px 3px rgba(0, 0, 0, 0.5);
+  box-shadow: -1px 2px 3px rgba(0, 0, 0, 0.5);
 }
 
 /** Cart Page **/
@@ -791,10 +770,9 @@ ul {
   width: 100%;
   height: auto;
   border: 1px solid #33b27b;
-  padding: 10px;
+  padding: 8px;
   border-radius: 5px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .cart-details ul {
@@ -803,12 +781,12 @@ ul {
 
 .cart-details ul li:first-child {
   display: inline-block;
-  width: 75%;
+  width: 70%;
 }
 
 .cart-details ul li:last-child {
   display: inline-block;
-  width: 19%;
+  width: 30%;
 }
 
 .cart-details a {
@@ -838,10 +816,8 @@ ul {
   left: 50%;
   top: 45%;
   text-align: center;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  transform: translate(-50%, -50%);
+  box-sizing: border-box;
   border: 1px solid #33b27b;
   padding: 20px;
   border-radius: 5px;
@@ -882,10 +858,8 @@ ul {
 .product {
   background-color: #fff;
   padding: 15px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin-bottom: 20px;
-  -webkit-transition: 0.2s ease-in-out;
   transition: 0.2s ease-in-out;
   border-radius: 5px;
 }
@@ -938,8 +912,7 @@ ul {
 }
 
 .product:hover {
-  -webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.5);
-          box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.5);
   border-radius: 5px;
   cursor: pointer;
 }
@@ -962,8 +935,7 @@ ul {
   padding: 5px 10px;
   background-color: #ed017f;
   border-radius: 5px;
-  -webkit-box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.5);
-          box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.5);
 }
 
 /* This is the checked state */
@@ -983,8 +955,7 @@ ul {
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   padding: 20px;
   background-color: #fff;
   font-family: Tahoma;
@@ -1034,8 +1005,7 @@ ul {
   width: 90%;
   margin: 10px auto;
   border-radius: 5px;
-  -webkit-box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.5);
-          box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.5);
 }
 
 .account img.profile-pic {
@@ -1045,18 +1015,14 @@ ul {
   border-radius: 2px;
   left: 40%;
   top: 5%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  object-fit: cover;
+  justify-content: center;
 }
 
 .account ul li {
   display: block;
   padding: 10px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   cursor: pointer;
 }
 
@@ -1116,8 +1082,7 @@ ul {
   border: 1px solid #33b27b;
   padding: 10px;
   border-radius: 5px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .checkout-details ul {
@@ -1153,13 +1118,11 @@ ul {
 .success .success_info {
   border: 1px solid #33b27b;
   padding: 20px;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   position: relative;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   width: 40%;
   border-radius: 5px;
   text-align: center;
@@ -1186,125 +1149,143 @@ ul {
     width: 97%;
     margin: auto;
   }
+
   .text-content h1 {
     font-size: 12px;
     text-shadow: -1px 2px 3px rgba(0, 0, 0, 0.5);
     letter-spacing: 1px;
     margin-bottom: 15px;
   }
+
   .text-content .shop-btn {
     padding: 9px 15px;
     font-size: 12px;
   }
+
   .newsletter input[type=text] {
     width: 170px;
     margin-left: -5px;
     margin-bottom: 5px;
   }
+
   .service-grid {
     margin-bottom: 10px;
   }
+
   .card img {
     height: auto;
   }
+
   .nav-item .nav-link {
     font-size: 10px;
   }
+
   .newsletter input[type=text] {
     width: 190px;
     margin-left: -5px;
     margin-bottom: 5px;
   }
+
   .contact .form_container {
     width: 95%;
     margin: 20px auto;
   }
+
   .recommended .recommend {
     width: 200px;
     margin: auto;
     height: auto;
   }
+
   .promotion h2 {
     font-size: 24px;
     margin-bottom: 20px;
   }
+
   .success .success_info {
     width: 90%;
   }
 }
-
 @media screen and (min-width: 360px) and (max-width: 640px) {
   .newsletter input[type=text] {
     width: 230px;
     margin-left: -5px;
     margin-bottom: 10px;
   }
+
   .promotion h2 {
     font-size: 24px;
     margin-bottom: 20px;
   }
+
   .success .success_info {
     width: 90%;
   }
+
   .products .card img {
     height: auto;
   }
 }
-
 @media screen and (min-width: 375px) and (max-width: 667px) {
   .newsletter input[type=text] {
     width: 245px;
     margin-left: -5px;
     margin-bottom: 10px;
   }
+
   .promotion h2 {
     font-size: 24px;
     margin-bottom: 20px;
   }
+
   .success .success_info {
     width: 90%;
   }
+
   .products .card img {
     height: auto;
   }
 }
-
 @media screen and (min-width: 411px) and (max-width: 731px) {
   .newsletter input[type=text] {
     width: 275px;
     margin-left: -5px;
     margin-bottom: 10px;
   }
+
   .promotion h2 {
     font-size: 24px;
     margin-bottom: 20px;
   }
+
   .success .success_info {
     width: 90%;
   }
+
   .products .card img {
     height: auto;
   }
 }
-
 @media screen and (min-width: 412px) and (max-width: 732px) {
   .newsletter input[type=text] {
     width: 275px;
     margin-left: -5px;
     margin-bottom: 10px;
   }
+
   .promotion h2 {
     font-size: 24px;
     margin-bottom: 20px;
   }
+
   .success .success_info {
     width: 90%;
   }
+
   .products .card img {
     height: auto !important;
   }
 }
-
 @media screen and (min-width: 569px) and (max-width: 731px) {
   .text-content h1 {
     font-size: 18px;
@@ -1312,62 +1293,73 @@ ul {
     letter-spacing: 1px;
     margin-bottom: 15px;
   }
+
   .text-content .shop-btn {
     padding: 10px 25px;
   }
+
   .card {
     margin-bottom: 9px;
   }
+
   .newsletter input[type=text] {
     width: 200px;
     margin-left: -5px;
     margin-bottom: 5px;
   }
+
   .service-grid {
     margin-bottom: 10px;
   }
+
   .card-body a {
     padding: 10px 15px;
   }
+
   .card img {
     height: auto;
   }
+
   .contact .form_container {
     width: 95%;
     margin: 20px auto;
   }
+
   .recommended .recommend {
     width: 175px;
     margin: auto;
     height: auto;
   }
+
   .promotion h2 {
     font-size: 24px;
     margin-bottom: 20px;
   }
+
   .products .card img {
     height: auto;
   }
 }
-
 @media screen and (min-width: 600px) and (max-width: 960px) {
   .newsletter input[type=text] {
     width: 450px;
     margin-left: -5px;
     margin-bottom: 10px;
   }
+
   .promotion h2 {
     font-size: 24px;
     margin-bottom: 20px;
   }
+
   .success .success_info {
     width: 60%;
   }
+
   .products .card img {
     height: auto;
   }
 }
-
 @media screen and (min-width: 732px) and (max-width: 767px) {
   .text-content h1 {
     font-size: 18px;
@@ -1375,36 +1367,43 @@ ul {
     letter-spacing: 1px;
     margin-bottom: 15px;
   }
+
   .text-content .shop-btn {
     padding: 10px 25px;
   }
+
   .newsletter input[type=text] {
     width: 250px;
     margin-left: -5px;
     margin-bottom: 5px;
   }
+
   .service-grid {
     margin-bottom: 10px;
   }
+
   .card-body a {
     padding: 10px 15px;
   }
+
   .card img {
     height: auto;
   }
+
   .contact .form_container {
     width: 95%;
     margin: 20px auto;
   }
+
   .success .success_info {
     width: 60%;
   }
+
   .products .card .card-body {
     padding: 0;
     font-size: 8px;
   }
 }
-
 @media screen and (min-width: 768px) and (max-width: 1024px) {
   .text-content h1 {
     font-size: 18px;
@@ -1412,62 +1411,73 @@ ul {
     letter-spacing: 1px;
     margin-bottom: 15px;
   }
+
   .text-content .shop-btn {
     padding: 10px 25px;
   }
+
   .newsletter input[type=text] {
     width: 230px;
     margin-left: -5px;
     margin-bottom: 5px;
   }
+
   .card-body a {
     padding: 0px 0px;
     font-size: 8px;
     color: #fff;
     text-shadow: -1px 2px 3px rgba(0, 0, 0, 0.5);
   }
+
   .service-grid {
     margin-bottom: 10px;
   }
+
   .card img {
     width: 100%;
   }
+
   .contact .form_container {
     width: 80%;
     margin: 20px auto;
   }
+
   .success .success_info {
     width: 60%;
   }
+
   .cart_details ul li h6 {
     font-size: 9px;
   }
+
   .cart_details a {
     padding: 5px 15px;
   }
+
   .cart_details .fab.fa-cc-visa, .fab.fa-cc-mastercard, .fab.fa-cc-paypal {
     font-size: 12px;
   }
+
   .products .card .card-body {
     padding: 2px;
     font-size: 8px;
   }
 }
-
 @media screen and (min-width: 1024px) and (max-width: 1366px) {
   .newsletter input[type=text] {
     width: 350px;
     margin-left: -5px;
     margin-bottom: 5px;
   }
+
   .text-content h1 {
     font-size: 40px;
   }
+
   .success .success_info {
     width: 50%;
   }
 }
-
 @media screen and (min-width: 1366px) {
   .newsletter input[type=text] {
     width: 500px;
@@ -1475,4 +1485,5 @@ ul {
     margin-bottom: 5px;
   }
 }
+
 /*# sourceMappingURL=style.css.map */
