--- a/public/src/assets/css/style.scss
+++ b/public/src/assets/css/style.scss
@@ -609,36 +609,69 @@
 	color: $secondary-color;
 }
 
+.product-details .item-qty i{
+	font-size: 13px;
+	width: 25px;
+	height: 25px;
+	line-height: 25px;
+	text-align: center;
+	padding: 2px;
+	background-color: #f5f5f5;
+	cursor: pointer;
+}
+
+.product-details .item-qty span {
+	padding: 8px;
+}
+
 .product-details .add-to-cart {
 	padding: 9px 75px;
 	font-size: 16px;
 	font-weight: 500;
+	border: transparent;
 	background-color: $secondary-color;
 	color: #fff;
 	border-radius: 5px;
+	transition: 0.5s ease-in-out;
+}
+
+.product-details .add-to-cart:hover {
+	color: #000;
+	background-color: #f5f5f5;
+}
+
+.product-details .add-to-cart:focus {
+	border: none;
 }
 
 .product-details ul li {
 	list-style: none;
 	display: inline-block;
-	padding-right: 15px;
+	// padding-right: 5px;
 }
 
-.product-details ul a {
-	padding: 5px;
+.product-details .icon-circle i {
+	font-size: 14px;
+	width: 30px;
+	height: 30px;
+	line-height: 25px;
+	text-align: center;
 	background-color: #f5f5f5;
-	border-radius: 50%;
-	font-size: 15px;
+	padding: 3px;
+	margin-right: 5px;
+	cursor: pointer;
 }
 
-.product-details ul a i.fa.fa-facebook {
+.product-details .icon-circle i.fa.fa-facebook {
 	color: #3b5998;
-	padding: 0 !important;
 }
 
-.product-details ul a i.fa.fa-twitter {
-	color: #00acee;
-	padding: 0 !important;
+.product-details .icon-circle i.fa.fa-instagram {
+	color:  #C13584;
+}
+
+.product-details .icon-circle i.fa.fa-twitter {
+	color: #1DA1F2;
 }
 
 .single-product-description {
@@ -812,31 +845,39 @@
 }
 
 /** cart empty **/
-.cart_empty {
+.cart-empty {
 	@extend .page-setup;
 }
 
-.cart_empty .cart_container_empty {
+.cart-empty .cart-empty-inner{
 	@extend .page-container-setup;
 	width: 100%;
 	height: 300px;
 }
 
-.cart_container_empty  .cart_message {
-	position: absolute;
-	margin: 0;
+.cart-empty-inner  .empty-cart-content {
+	position: relative;
+	max-width: 400px;
+	max-height: 300px;
+	border: 1px solid #000;
+	top: 50%;
 	left: 50%;
-	top: 45%;
-	text-align: center;
 	transform: translate(-50%, -50%);
+	text-align: center;
+	padding: 20px 10px;
 	box-sizing: border-box;
-	border: 1px solid $secondary_color;
-	padding: 20px;
-	border-radius: 5px;
 }
 
-.cart_container_empty .fa.fa-cart-plus {
-	color: $primary_color;
+.empty-cart-content h4 {
+	padding: 15px 0px;
+}
+
+.empty-cart-content .continue-shopping {
+	box-sizing: inherit;
+	padding: 10px 30px;
+	width: 80%;
+	color: #fff;
+	background-color: $primary_color;
 }
 
 /** Shop **/
@@ -917,11 +958,18 @@
 }
 
 .product .add-to-cart {
-	padding: 5px 46px;
+	width: 100%;
 	color: $primary-color;
+	background-color: transparent;
 	border-radius: 5px;
 	font-weight: 500;
 	border: 1px solid $primary-color;
+	transition: 0.5s ease-in-out;
+}
+
+.product .add-to-cart:hover {
+	background-color: $primary-color;
+	color: #fff;
 }
 
 .product-img {
