--- a/public/src/assets/css/style.css
+++ b/public/src/assets/css/style.css
@@ -128,7 +128,6 @@ ul {
 
 .text-content {
   position: absolute;
-  margin: 0;
   color: #fff;
   left: 50%;
   top: 50%;
@@ -336,6 +335,43 @@ ul {
   color: #b3b3b3;
 }
 
+/** Trending Category **/
+.trending-category {
+  width: 97%;
+  margin: auto;
+  margin-bottom: 15px;
+  background-color: #fff;
+  border-radius: 5px;
+}
+
+.trending-category .trend-title {
+  width: 100%;
+  height: 40px;
+  border-bottom: 1px solid #f5f5f5;
+  box-sizing: border-box;
+  padding: 5px 10px;
+}
+
+.trending-category .trend-img {
+  min-height: 220px;
+  text-align: center;
+}
+
+.trending-products .trend-description {
+  height: 50px;
+  padding: 5px 8px;
+}
+
+.trending-products .trend-description h5 {
+  font-size: 15px;
+  font-weight: 600;
+  font-family: "Courier New", Courier, monospace;
+}
+
+.trending-products .trend-description h6 {
+  font-weight: 400;
+}
+
 /** Recommend Categories **/
 .recommended-categories {
   width: 97%;
@@ -399,110 +435,7 @@ ul {
   height: 20px;
 }
 
-/** newsletter section **/
-.newsletter {
-  width: 100%;
-  height: auto;
-  background-color: #1c1d1f;
-  color: #fff;
-  padding: 9px 0px 0px 15px;
-  box-sizing: border-box;
-}
-
-.newsletter .newsletter_container {
-  width: 95%;
-  margin: auto;
-}
-
-.newsletter input[type=text] {
-  width: 400px;
-  border: none;
-  border-radius: 5px 0px 0px 5px;
-  padding: 8px 0px 8px 8px;
-  margin-top: 15px;
-  box-sizing: border-box;
-  margin-left: 80px;
-}
-
-.newsletter button {
-  background-color: #ed017f;
-  border: none;
-  color: #fff;
-  padding: 9px;
-  margin-left: -4px;
-  border-radius: 0px 5px 5px 0px;
-  cursor: pointer;
-}
-
-.newsletter p {
-  font-size: 18px;
-  font-weight: lighter;
-  letter-spacing: 1px;
-}
-
 /** Footer **/
-.contact-info {
-  width: 100%;
-  background-color: #1c1d1f;
-}
-
-.contact-info-inner {
-  width: 95%;
-  margin: auto;
-  padding: 10px 0px 0px 0px;
-}
-
-.contact-info-inner ul {
-  list-style-type: none;
-  color: #b5b5b5;
-}
-
-.contact-info-inner i.fa.fa-envelope, i.fa.fa-phone {
-  font-size: 20px;
-  padding: 15px;
-  background-color: #fff !important;
-  color: #000 !important;
-  border-radius: 50%;
-}
-
-.contact-info-inner h4 {
-  color: #b5b5b5;
-}
-
-.contact-info-inner p {
-  color: #b5b5b5;
-}
-
-.contact-info-inner ul li {
-  display: inline-block;
-  transition: 0.3s ease-in-out;
-}
-
-.contact-info-inner ul li:first-child {
-  padding-right: 15px;
-}
-
-.contact-info-inner ul li:hover {
-  color: #fff;
-}
-
-.contact-info-inner form input[type=text] {
-  height: 40px;
-  border: none;
-  width: 200px;
-  padding: 0px 8px;
-  font-family: sans-serif;
-  border-radius: 5px 0px 0px 5px;
-}
-
-.contact-info-inner form input[type=submit] {
-  padding: 8.3px;
-  background-color: #ed017f;
-  color: #fff;
-  border: none;
-  border-radius: 0px 5px 5px 0px;
-}
-
 .footer {
   width: 100%;
   background-color: #000;
@@ -512,11 +445,12 @@ ul {
   width: 95%;
   margin: auto;
   color: #b5b5b5;
+  padding: 30px 0px;
 }
 
 .footer-inner h4 {
   font-size: 18px;
-  font-weight: 600;
+  font-weight: 400;
   margin: 15px 0px;
 }
 
@@ -529,9 +463,10 @@ ul {
   font-weight: lighter;
 }
 
-.footer-inner i.fa.fa-facebook, i.fa.fa-twitter, i.fa.fa-instagram {
+.footer-inner i {
   font-size: 20px;
-  padding: 0px 10px 0px 0px;
+  width: 32px;
+  height: 32px;
   transition: 0.3s ease-in-out;
 }
 
@@ -553,7 +488,6 @@ ul {
 .copyright-area {
   width: 100%;
   background-color: #000;
-  box-shadow: 0px 2px 3px 1px #ed017f;
 }
 
 .copyright-inner {
@@ -846,7 +780,7 @@ ul {
   position: relative;
   max-width: 400px;
   max-height: 300px;
-  border: 1px solid #000;
+  border: 1px solid #ed017f;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
