--- a/public/src/assets/css/style.scss
+++ b/public/src/assets/css/style.scss
@@ -306,8 +306,7 @@
 .trending-category {
 	width: 97%;
 	// height: 290px;
-	margin: auto;
-	margin-bottom: 15px;
+	margin: 15px auto;
 	background-color: #fff;
 	border-radius: 5px;
 }
