--- a/public/src/assets/css/style.scss
+++ b/public/src/assets/css/style.scss
@@ -90,7 +90,7 @@
 }
 
 #myCarousel {
-	border: 0.8px solid #d3d3d3;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .text-content{
@@ -918,27 +918,20 @@
 	cursor: pointer;
 }
 
-.pagination ul {
-	list-style: none;
+.shop-container .right-loading {
+	height: 80vh;
 }
 
-.pagination ul li {
-	display: inline-block;
-	padding-right: 10px;
-	cursor: pointer;
+.shop-container .right-loading .loading-giff {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
-.pagination ul li:active {
-	color: #fff;
+.loading-giff i.fa.fa-spinner.fa-spin {
+	font-size: 70px;
 }
-
-.pagination ul li span {
-	padding: 5px 10px;
-	background-color: $primary-color;
-	border-radius: 5px;
-	box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.5);
-}
-
 /* This is the checked state */
 .custom-radio .custom-control-input:checked~.custom-control-label::before,
 .custom-radio .custom-control-input:checked~.custom-control-label::after {
@@ -1124,11 +1117,19 @@
 	width: 19%;
 }
 
-.checkout-details a {
+// .checkout-details a {
+// 	padding: 5px 50px;
+// 	background-color: $secondary_color;
+// 	color: $tertiary_white;
+// 	border-radius: 5px;
+// }
+
+.checkout-details .place-order {
 	padding: 5px 50px;
 	background-color: $secondary_color;
 	color: $tertiary_white;
 	border-radius: 5px;
+	border: none;
 }
 
 .checkout-details .fa.fa-cc-visa, .fa.fa-cc-mastercard, .fa.fa-cc-paypal {
