--- a/admin/src/assets/css/style.css
+++ b/admin/src/assets/css/style.css
@@ -250,11 +250,12 @@ ul {
 
 .right .order-info {
   width: 100%;
-  height: 60px;
+  height: 70px;
   background-color: #f5f5f5;
   border-radius: 5px;
   box-sizing: border-box;
   padding: 8px;
+  text-align: center;
 }
 
 .right .order-info .right {
