--- a/admin/src/assets/scss/style.scss
+++ b/admin/src/assets/scss/style.scss
@@ -228,11 +228,12 @@ background: linear-gradient(to right, #b91d73, #f953c6); /* W3C, IE 10+/ Edge, F
 
 .right .order-info {
 	width: 100%;
-	height: 60px;
+	height: 70px;
 	background-color: #f5f5f5;
 	border-radius: 5px;
 	box-sizing: border-box;
 	padding: 8px;
+	text-align: center;
 }
 
 .right .order-info .right {
