Working on order functionality

--- a/public/src/assets/css/style.css
+++ b/public/src/assets/css/style.css
@@ -1006,6 +1006,14 @@ ul {
   margin: auto;
 }
 
+.checkout .personal-information h2 {
+  padding: 10px 0px;
+}
+
+.checkout .personal-information .order-note {
+  border: 1px solid #ed017f !important;
+}
+
 .checkout .personal-information input[type=text], select {
   width: 100%;
   margin: 10px 0px;
