--- a/admin/src/assets/css/style.css
+++ b/admin/src/assets/css/style.css
@@ -34,13 +34,13 @@ ul {
 }
 
 /** reset code **/
-.page-setup, .add-product, .single-order, .settings, .store, .orders, .dashboard {
+.page-setup, .add-product, .single-order, .settings, .categories, .store, .orders, .dashboard {
   width: 100%;
   background-color: #f5f5f5;
   padding: 20px;
 }
 
-.page-inner-setup, .add-product .add-product-inner, .single-order .single-order-inner, .settings .settings-inner, .store .store-inner, .orders .orders-inner, .dashboard .dashboard-inner {
+.page-inner-setup, .add-product .add-product-inner, .single-order .single-order-inner, .settings .settings-inner, .categories .categories-inner, .store .store-inner, .orders .orders-inner, .dashboard .dashboard-inner {
   width: 95%;
   margin: 0px auto;
   padding: 20px;
@@ -308,6 +308,86 @@ ul {
   margin-bottom: 15px;
 }
 
+/** Categories **/
+.categories-inner .admin-profile {
+  text-align: center;
+}
+
+.categories-inner .admin-profile h6 {
+  font-size: 18px;
+  font-weight: lighter;
+}
+
+.categories-inner .left {
+  margin-bottom: 15px;
+  padding: 15px 10px;
+}
+
+.categories-inner .left ul {
+  list-style: none;
+}
+
+.categories-inner .left ul li i.fa.fa-tachometer, i.fa.fa-gift, i.fa.fa-shopping-basket, i.fa.fa-cog, i.fa.fa-line-chart {
+  width: 15%;
+}
+
+.categories-inner .left ul li {
+  font-size: 20px;
+  padding: 10px 5px;
+  cursor: pointer;
+}
+
+.categories-inner .left ul li .link {
+  color: #000;
+}
+
+.categories-inner .left ul li:hover {
+  background-color: #33b27b;
+  border-radius: 5px;
+}
+
+.categories-inner .right h2 {
+  padding-bottom: 15px;
+}
+
+.categories-inner .category-name, .category-submit {
+  width: 100%;
+}
+
+.categories-inner form input[type=text] {
+  height: 50px;
+  border: none;
+  border-bottom: 1px solid #90ee90;
+  margin-bottom: 8px;
+  padding: 0px 8px;
+}
+
+.categories-inner form input[type=submit] {
+  border: none;
+  background-color: #ed017f;
+  height: 40px;
+  color: #fff;
+  font-size: 17px;
+}
+
+.categories-inner ul.categories-list {
+  list-style: none;
+  margin-top: 15px;
+}
+
+.categories-inner ul.categories-list li {
+  padding: 10px 40px;
+  background-color: #33b27b;
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+.categories-inner ul.categories-list i {
+  padding-right: 8px;
+  cursor: pointer;
+  color: #000;
+}
+
 /** Settings **/
 .settings-inner .admin-profile {
   text-align: center;
@@ -373,7 +453,7 @@ ul {
   list-style: none;
 }
 
-.single-order-inner .left ul li i.fa.fa-tachometer, i.fa.fa-gift, i.fa.fa-shopping-basket, i.fa.fa-cog, i.fa.fa-line-chart {
+.single-order-inner .left ul li i.fa.fa-tachometer, i.fa.fa-gift, i.fa.fa-shopping-basket, i.fa.fa-cog, i.fa.fa-line-chart, i.fa.fa-list-alt {
   width: 15%;
 }
 
@@ -466,6 +546,15 @@ ul {
 }
 
 /** Add Product **/
+.add-product-inner .admin-profile {
+  text-align: center;
+}
+
+.add-product-inner .admin-profile h6 {
+  font-size: 18px;
+  font-weight: lighter;
+}
+
 .add-product-inner .left {
   margin-bottom: 15px;
   padding: 15px 10px;
@@ -518,6 +607,55 @@ ul {
 
 .add-product .edit-delete .fa.fa-trash {
   font-size: 20px;
+}
+
+/** Admin Login **/
+.admin-login {
+  width: 100%;
+  height: 100vh;
+  background-color: #f5f5f5;
+}
+
+.admin-login .admin-inner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  min-width: 30%;
+  min-height: 40%;
+  background-color: #fff;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.admin-login h2 {
+  padding-bottom: 10px;
+  font-weight: 600;
+}
+
+.admin-inner form .username, .password {
+  width: 100%;
+  height: 40px;
+  margin-bottom: 15px;
+  padding: 0px 8px;
+  border: 1px solid #ed017f;
+  border-radius: 5px;
+}
+
+.admin-inner form .submit {
+  background: #f953c6;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #b91d73, #f953c6);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #b91d73, #f953c6);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  border: none;
+  width: 100%;
+  height: 50px;
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+  border-radius: 5px;
 }
 
 /*# sourceMappingURL=style.css.map */
