--- a/admin/src/assets/scss/style.scss
+++ b/admin/src/assets/scss/style.scss
@@ -677,3 +677,58 @@ background: linear-gradient(to right, #b91d73, #f953c6); /* W3C, IE 10+/ Edge, F
 	font-weight: bold;
 	border-radius: 5px;
 }
+
+/** Users **/
+
+.users {
+	@extend .page-setup;
+}
+
+.users .users-inner {
+	@extend .page-inner-setup;
+}
+
+.users-inner .admin-profile {
+	text-align: center;
+}
+
+.users-inner .admin-profile h6 {
+	font-size: 18px;
+	font-weight: lighter;
+}
+
+.users-inner .left {
+	// background-color: #f5f5f5;
+	margin-bottom: 15px;
+	padding: 15px 10px;
+}
+
+.users-inner .left ul {
+	list-style: none;
+}
+
+.users-inner .left ul li i.fa.fa-tachometer,
+ i.fa.fa-gift, i.fa.fa-shopping-basket, 
+i.fa.fa-cog, i.fa.fa-line-chart, i.fa.fa-user {
+	width: 15%;
+}
+
+.users-inner .left ul li{
+	font-size: 20px;
+	padding: 10px 5px;
+	cursor: pointer;
+	color: #000;
+}
+
+.users-inner .left ul li .link {
+	color: #000;
+}
+
+.users-inner .left ul li:hover {
+	background-color: $secondary-color;
+	border-radius: 5px; 
+}
+
+.users-inner .right h2 {
+	padding-bottom: 10px;
+}
