--- a/public/src/assets/css/style.css
+++ b/public/src/assets/css/style.css
@@ -311,11 +311,32 @@ ul {
 
 .category div.item {
   padding: 10px 0px;
-  width: 100px;
+  width: 100%;
   height: 260px;
   text-align: center;
 }
 
+.category div.item .product-description {
+  padding: 5px;
+}
+
+.category .loading-item {
+  width: 100%;
+  height: 260px;
+  animation: pulse 1s infinite ease-in-out;
+}
+
+@keyframes pulse {
+  0% {
+    background-color: rgba(165, 165, 165, 0.2);
+  }
+  50% {
+    background-color: rgba(165, 165, 165, 0.3);
+  }
+  100% {
+    background-color: rgba(165, 165, 165, 0.1);
+  }
+}
 /** Popular Categories **/
 .popular-products {
   width: 97%;
@@ -508,9 +529,10 @@ ul {
 }
 
 .product-slider .img-container {
-  padding: 20px;
   width: 100%;
   height: 400px;
+  margin: 40px 0px;
+  text-align: center;
 }
 
 .product-details {
