Adding trending categories

--- a/admin/src/assets/css/style.css
+++ b/admin/src/assets/css/style.css
@@ -373,6 +373,8 @@ ul {
 .categories-inner ul.categories-list {
   list-style: none;
   margin-top: 15px;
+  overflow-y: scroll;
+  height: 500px;
 }
 
 .categories-inner ul.categories-list li {
