Adding recommended category

--- a/public/src/assets/css/style.scss
+++ b/public/src/assets/css/style.scss
@@ -16,6 +16,7 @@
 
 @import 'reset';
 
+
 /** Home BG **/
 .home {
 	background-color: $bg-color;
@@ -259,6 +260,14 @@
 	font-weight: 500;
 	font-size: 13px;
 	color: $secondary-color;
+}
+
+.latest-deals a {
+	color: #000;
+}
+
+.latest-deals a:hover {
+	text-decoration: underline;
 }
 
 .category {
@@ -989,9 +998,18 @@
 }
 
 .product:hover {
-	box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.5);
+	// box-shadow: 3px 3px 5px 6px #ccc;
+	box-shadow:
+	0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+	0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+	0 12.5px 10px rgba(0, 0, 0, 0.06),
+	0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+	0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+	0 100px 80px rgba(0, 0, 0, 0.12)
+  ;
 	border-radius: 5px;
 	cursor: pointer;
+	transition: 0.3s ease-out;
 }
 
 .shop-container .right-loading {
