--- a/public/src/assets/css/style.css
+++ b/public/src/assets/css/style.css
@@ -294,6 +294,14 @@ ul {
   color: #33b27b;
 }
 
+.latest-deals a {
+  color: #000;
+}
+
+.latest-deals a:hover {
+  text-decoration: underline;
+}
+
 .category {
   width: 97%;
   height: 300px;
@@ -932,9 +940,10 @@ ul {
   }
 }
 .product:hover {
-  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12);
   border-radius: 5px;
   cursor: pointer;
+  transition: 0.3s ease-out;
 }
 
 .shop-container .right-loading {
