--- a/public/src/assets/css/style.css
+++ b/public/src/assets/css/style.css
@@ -125,13 +125,17 @@ ul {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.text-content {
+.carousel-inner .text-content {
   position: absolute;
   color: #fff;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
   box-sizing: border-box;
+}
+
+.carousel-inner {
+  max-height: 450px !important;
 }
 
 .text-content h1 {
@@ -280,6 +284,10 @@ ul {
 
 .latest-deals .deal-info p {
   font-size: 18px;
+}
+
+.deal-info .left {
+  text-align: center;
 }
 
 .latest-deals .deal-info h6 .sale-price {
@@ -857,7 +865,6 @@ ul {
   box-sizing: border-box;
   margin-bottom: 20px;
   transition: 0.2s ease-in-out;
-  border-radius: 5px;
 }
 
 .product .product-description h3.title {
