Added API URLs to .env

--- a/public/src/assets/css/style.scss
+++ b/public/src/assets/css/style.scss
@@ -103,9 +103,9 @@
   box-sizing: border-box;
 }
 
-.carousel-inner {
-	max-height: 450px !important;
-}
+// .carousel-inner {
+// 	max-height: 600px !important;
+// }
 
 .text-content h1 {
 	margin-bottom: 25px;
