--- a/public/src/assets/css/style.scss
+++ b/public/src/assets/css/style.scss
@@ -674,6 +674,7 @@
 .single-product-description {
 	@extend .page-container-setup;
 	margin-top: 20px;
+	margin-bottom: 20px;
 }
 
 .single-product-description h3 {
@@ -689,6 +690,24 @@
 	padding-top: 10px;
 }
 
+.similar-items {
+	width: 95%;
+	margin: auto;
+}
+
+.similar-items h4 {
+	padding-bottom: 8px;
+}
+
+.similar-items .similar-product {
+	width: 100%;
+	color: #000;
+	padding: 5px;
+}
+
+.product .product-description {
+	padding-top: 4px;
+}
 /** About Page **/
 .about {
 	@extend .page-setup;
