--- a/public/src/assets/css/style.css
+++ b/public/src/assets/css/style.css
@@ -590,7 +590,9 @@ ul {
 }
 
 .product-details .add-to-cart {
-  padding: 9px 75px;
+  max-width: 100%;
+  height: 40px;
+  padding: 0px 30px;
   font-size: 16px;
   font-weight: 500;
   border: transparent;
@@ -679,6 +681,10 @@ ul {
   color: #000;
   text-align: center;
   padding: 5px;
+}
+
+.similar-items .similar-item {
+  text-align: center;
 }
 
 .product .product-description {
